# supertonic-express

./: .gitignore  CHANGELOG_CUSTOM.md  Dockerfile  README.md  TEST_RESULTS.md  demo_spanish_detection.py
benchmarks/: asr_validate.py  asr_validation.json  comparison.md  cross_host_comparison.md  profile_baseline.txt  profile_optimized.txt  profile_utils.py  report.py  results_baseline.json  results_optimized.json  tts_benchmark.py
cpp/: README.md
csharp/: README.md
docker/: README.md
docs/: API.md  FEATURE_SPANISH_DETECTION.md  IMPLEMENTATION_SUMMARY.md  OPEN_WEBUI_INTEGRATION.md  local_install_performance.md
flutter/: README.md
go/: README.md
ios/: README.md
java/: README.md
js/: .env.example  .gitignore  README.md  index.js  package.json  setup.sh  test_spanish_detection.js
nodejs/: README.md
py/: README.md  README_API.md  example_onnx.py  examples_usage.py  helper.py  pyproject.toml  requirements.txt  requirements_gpu.txt  start_server.sh  test_api.py  test_cpu_optimizations.py  test_helper.py  test_openai_compat.py  test_spanish_detection.py  test_voice_loading.py
py/api/src/: __init__.py  main.py
py/api/src/core/: config.py
py/api/src/routers/: openai_compatible.py
py/api/src/services/: audio_converter.py  tts_service.py
py/api/src/structures/: __init__.py  schemas.py
rust/: README.md
scripts/: benchmark_pcores.sh  fix_voice.py  inspect_onnx.py  monitor_gpu_resources.sh  monitor_resources.sh  reproduce_benchmark.py  run_demo_spanish.sh  run_server_cpu.sh  run_server_gpu.sh  run_server_igpu.sh  start_server_venv.sh  test_tts.py  (+3 more)
(+17 files in other folders)
