[project]
name = "tts-onnx"
version = "1.0.0"
description = "TTS ONNX Inference with FastAPI Server"
requires-python = ">=3.10"
dependencies = [
    "onnxruntime==1.23.1",
    "numpy>=1.26.0",
    "soundfile>=0.12.1",
    "librosa>=0.10.0",
    "PyYAML>=6.0",
    "transformers>=4.30.0",
    "huggingface-hub>=0.20.0",
    # FastAPI dependencies
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "loguru>=0.7.0",
]

[tool.setuptools]
py-modules = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

